<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DataActivity">


    <ImageView
        android:id="@+id/imageViewData"
        android:layout_width="410dp"
        android:layout_height="381dp"
        android:contentDescription="@string/imageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/hasilTextView"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/hasil_analisa"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewData" />

    <TextView
        android:id="@+id/tanggalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tanggal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewData" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewData" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:labelFor="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tanggalTextView" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="319dp"
        android:layout_height="45dp"
        android:ems="1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:id="@+id/birthdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/birthdate"
        android:labelFor="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:ems="1"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/birthdateTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/birthdateTextView"
        tools:layout_editor_absoluteY="646dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/hasil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/risk"
        android:textColor="@color/red_salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/resultTextView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/description"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:text="Description"
        app:layout_constraintEnd_toEndOf="@+id/resultTextView"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="@+id/resultTextView6"
        tools:layout_editor_absoluteY="742dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="339dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_rounded_yellow"
        android:backgroundTint="@color/yellow"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>