<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="320dp"
        android:text="@string/title1"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginTop="364dp"
        android:text="@string/title2"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/white"
        android:text="@string/btnLogin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="108dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.202"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>